objects/Case.object
<CustomObject>
    <fields>
        <fullName>Warning_For_CP_CPS_Last_Updated_Date__c</fullName>
        <formula>IF(AND(OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;), 
TODAY() - CP_CPS_Last_Updated_Date__c &gt; 366), 
IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; CP/CPS Last Updated Date over a year old&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Warning for &quot;CP/CPS Last Updated Date over a year old&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_For_Code_Signing_Audit_St_Date__c</fullName>
        <formula>IF (OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;),
IF(Code_Signing_Audit_Statement_Date__c - Code_Signing_Audit_Period_End_Date__c &gt; 93, 
     (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Statement Dt &gt; 93 days after the Period End Dt&quot; + BR()),&quot;&quot;)+&quot; &quot;+ 
IF(Code_Signing_Audit_Period_End_Date__c - Code_Signing_Audit_Period_Start_Date__c &lt;= 30, 
    (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Point-in-Time Audit&quot; + BR()),&quot;&quot;)+&quot; &quot; + 
IF(Code_Signing_Audit_Period_End_Date__c - Code_Signing_Audit_Period_Start_Date__c &gt; 366, 
    (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Audit period longer than a year&quot; + BR()),&quot;&quot;)+&quot; &quot; +
IF(Code_Signing_Audit_Gap_For_All_Root_Case__c,(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Audit Gap&quot;),&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display warnings for ...
&quot;Statement Dt &gt; 93 days after the Period End Dt&quot;,
&quot;Audit period longer than a year&quot;, 
&quot;Point-in-Time Audit&quot;,
&quot;Audit Gap&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_For_EV_Code_Signing_Audit_St_Dt__c</fullName>
        <formula>IF (OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;),
    IF(EV_Code_Signing_Audit_Statement_Date__c - EV_Code_Signing_Audit_Period_End_Date__c &gt; 93, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Statement Dt &gt; 93 days after the Period End Dt&quot; + BR()),&quot;&quot;)+&quot; &quot;+ 
    IF(EV_Code_Signing_Audit_Period_End_Date__c - EV_Code_Signing_Audit_Period_Start_Date__c &lt;= 30, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Point-in-Time Audit&quot; + BR()),&quot;&quot;)+&quot; &quot; +
    IF(EV_Code_Signing_Audit_Period_End_Date__c - EV_Code_Signing_Audit_Period_Start_Date__c &gt; 366, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Audit period longer than a year&quot; + BR()),&quot;&quot;)+&quot; &quot; +
     IF(EVCodeSigning_AuditGap_For_All_RootCases__c,(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Audit Gap&quot;),&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display warnings for ...
&quot;Statement Dt &gt; 93 days after the Period End Dt&quot;,
&quot;Audit period longer than a year&quot;, 
&quot;Point-in-Time Audit&quot;,
&quot;Audit Gap&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_For_EV_SSL_Audit_Statement_Date__c</fullName>
        <formula>IF (OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;),
    IF(EV_Audit_Statement_Date__c - EV_Audit_Period_End_Date__c &gt; 93, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Statement Dt &gt; 93 days after the Period End Dt&quot; + BR()),&quot;&quot;)+&quot; &quot;+ 
    IF(EV_Audit_Period_End_Date__c - EV_Audit_Period_Start_Date__c &lt;= 30, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Point-in-Time Audit&quot; + BR()),&quot;&quot;)+&quot; &quot; +
    IF(EV_Audit_Period_End_Date__c - EV_Audit_Period_Start_Date__c &gt; 366, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Audit period longer than a year&quot; + BR()),&quot;&quot;)+&quot; &quot; +
      IF(EV_SSL_Audit_Gap_For_All_Root_Cases__c,(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Audit Gap&quot;),&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Audit period longer than a year&quot;, 
&quot;Point-in-Time Audit&quot;,
&quot;Audit Gap&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_For_Std_Audit_Statement_Date__c</fullName>
        <formula>IF (OR(RecordType.Name = &quot;CA Audit Update Request&quot;,RecordType.Name = &quot;CA Root Inclusion Request&quot;),
    IF(Standard_Audit_Statement_Date__c - Standard_Audit_Period_End_Date__c &gt; 93, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Statement Dt &gt; 93 days after the Period End Dt&quot; + BR()),&quot;&quot;)+&quot; &quot;+ 
    IF(Standard_Audit_Period_End_Date__c - Standard_Audit_Period_Start_Date__c &lt;= 30, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Point-in-Time Audit&quot; + BR()),&quot;&quot;)+&quot; &quot; +
    IF(Standard_Audit_Period_End_Date__c - Standard_Audit_Period_Start_Date__c &gt; 366, 
        (IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20) + &quot; Audit period longer than a year&quot; + BR()),&quot;&quot;)+&quot; &quot; +
    IF(Standard_Audit_Gap_For_All_Root_Cases__c,(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Audit Gap&quot;),&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Display warnings for ...
&quot;Statement Dt &gt; 93 days after the Period End Dt&quot;,
&quot;Audit period longer than a year&quot;, 
&quot;Point-in-Time Audit&quot;,
&quot;Audit Gap&quot;</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_for_Sanctioned_Country__c</fullName>
        <formula>IF((!ISBLANK(Account.BillingCountry) &amp;&amp; (LOWER(Account.BillingCountry) = &apos;iran&apos; || LOWER(Account.BillingCountry) = &apos;north korea&apos; || LOWER(Account.BillingCountry) = &apos;syria&apos; || LOWER(Account.BillingCountry) = &apos;sudan&apos; || LOWER(Account.BillingCountry) = &apos;cuba&apos; || LOWER(Account.BillingCountry) = &apos;venezuela&apos;)),(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Request is from a US-Sanctioned Country&quot;), 
IF((!ISBLANK(Country__c) &amp;&amp; (LOWER(Country__c) = &apos;iran&apos; || LOWER(Country__c) = &apos;north korea&apos; || LOWER(Country__c) = &apos;syria&apos; || LOWER(Country__c) = &apos;sudan&apos; || LOWER(Country__c) = &apos;cuba&apos; || LOWER(Country__c) = &apos;venezuela&apos;)),(IMAGE(&quot;/resource/Warning&quot;,&quot;Warning&quot;,20,20)+&quot; Request is from a US-Sanctioned Country&quot;),&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Warning is display if CA Owner &apos;Country&apos; or Case &apos;Country&apos; field is a US-Sanctioned country (Cuba, Iran, North Korea, Syria, Sudan, Venezuela)</inlineHelpText>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCAAuditCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Latest_Case_Comment__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CA_Audit_Update_Request</value>
        </filters>
        <label>All CA Audit Cases</label>
    </listViews>
    <listViews>
        <fullName>AllCARootInclusionCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CA_Root_Inclusion_Request</value>
        </filters>
        <label>All CA Root Inclusion Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>OpenCAAuditCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Case_Progress__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Mozilla_Status_Root_Certs__c</columns>
        <columns>Microsoft_Status_Root_Certs__c</columns>
        <columns>Case_Assigned_To__c</columns>
        <columns>Latest_Case_Comment__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open,On Hold,Escalated</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CA_Audit_Update_Request</value>
        </filters>
        <label>Open CA Audit Cases</label>
    </listViews>
    <listViews>
        <fullName>OpenCARootInclusionCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Link_to_Bugzilla_Bug__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Request_Status__c</columns>
        <columns>Microsoft_Request_Status__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.CA_Root_Inclusion_Request</value>
        </filters>
        <label>Open CA Root Inclusion Cases</label>
    </listViews>
    <listViews>
        <fullName>RecentlyViewedCases1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Request_Status__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Recently Viewed Cases (custom)</label>
    </listViews>
    <recordTypes>
        <fullName>CA_Audit_Update_Request</fullName>
        <active>true</active>
        <businessProcess>CA Case Request</businessProcess>
        <description>Submission of the CA audit update request</description>
        <label>CA Audit Update Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Owner_Root_Inclusion_Request</fullName>
        <active>true</active>
        <businessProcess>CA Case Request</businessProcess>
        <description>Creation of the CA Owner/Root inclusion request</description>
        <label>CA Owner/Root Inclusion Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_Root_Inclusion_Request</fullName>
        <active>true</active>
        <businessProcess>CA Case Request</businessProcess>
        <description>Creation of the CA Root inclusion request</description>
        <label>CA Root Inclusion Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckBRAudPeriodEndDtNotLaterThanStDate</fullName>
        <active>true</active>
        <description>Audit Period End Date cannot be later than the Audit Statement Date</description>
        <errorConditionFormula>BR_Audit_Period_End_Date__c &gt; BR_Audit_Statement_Date__c</errorConditionFormula>
        <errorDisplayField>BR_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>Audit Period End Date cannot be later than the Audit Statement Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckBRAuditDataVerifiedAfterAuthConfim</fullName>
        <active>true</active>
        <description>Show error when &quot;Data Verified&quot; is selected without checking the check box for Audit Authenticity Confirmed</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), NOT(ISBLANK(BR_Audit_Statement_Link__c)), ISPICKVAL(BR_Audit_Statement_Link_Verified__c, &quot;Data Verified&quot;), BR_Audit_Authenticity_Confirmed__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>BR_Audit_Authenticity_Confirmed__c</errorDisplayField>
        <errorMessage>BR Audit Authenticity Confirmed must be checked before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckBRAuditWebTrustSealIsNotPDF</fullName>
        <active>false</active>
        <description>DO NOT USE If audit file is https://www.cpacanada.ca/webtrustseal?sealid&quot; then prompt user to provide pdf file link and not the seal</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), REGEX(BR_Audit_Statement_Link__c, &quot;^https:\\/\\/www.cpacanada.ca\\/webtrustseal\\?sealid.*&quot;))</errorConditionFormula>
        <errorDisplayField>BR_Audit_Statement_Link__c</errorDisplayField>
        <errorMessage>DO NOT USE Provide the URL to the BR Audit Statement PDF file, not the Seal. e.g. http://www.cpacanada.ca/GenericHandlers/AptifyAttachmentHandler.ashx?AttachmentID=...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCSAudPeriodEndDtNotLaterThanStDate</fullName>
        <active>true</active>
        <description>Audit Period End Date cannot be later than the Audit Statement Date</description>
        <errorConditionFormula>Code_Signing_Audit_Period_End_Date__c &gt; Code_Signing_Audit_Statement_Date__c</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>Audit Period End Date cannot be later than the Audit Statement Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCSAuditDataVerifiedAfterAuthConfim</fullName>
        <active>true</active>
        <description>Show error when &quot;Data Verified&quot; is selected without checking the check box for Audit Authenticity Confirmed</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), NOT(ISBLANK(Code_Signing_Audit_Statement_Link__c)), ISPICKVAL(Code_Signing_Audit_Verified__c, &quot;Data Verified&quot;), Code_Signing_Audit_Authenticity_Confirm__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Authenticity_Confirm__c</errorDisplayField>
        <errorMessage>Code Signing Audit Authenticity Confirmed must be checked before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCodeSignAuditWebTrustSealIsNotPDF</fullName>
        <active>false</active>
        <description>DO NOT USE If audit file is https://www.cpacanada.ca/webtrustseal?sealid&quot; then prompt user to provide pdf file link and not the seal</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), REGEX(Code_Signing_Audit_Statement_Link__c, &quot;^https:\\/\\/www.cpacanada.ca\\/webtrustseal\\?sealid.*&quot;))</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Statement_Link__c</errorDisplayField>
        <errorMessage>DO NOT USE Provide the URL to the Code Signing Audit Statement PDF file, not the Seal. e.g. http://www.cpacanada.ca/GenericHandlers/AptifyAttachmentHandler.ashx?AttachmentID=...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVCAuditDataVerifiedAfterAuthConfir</fullName>
        <active>true</active>
        <description>Show error when &quot;Data Verified&quot; is selected without checking the check box for Audit Authenticity Confirmed</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), 
NOT(ISBLANK(EV_Code_Signing_Audit_Statement_Link__c)), 
ISPICKVAL(EV_Code_Signing_Verified__c, &quot;Data Verified&quot;), EV_Code_Signing_Audit_Auth_Confirmed__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Audit_Auth_Confirmed__c</errorDisplayField>
        <errorMessage>EV Code Signing Audit Authenticity Confirmed must be checked before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVCodePeriodEndDtNotLaterThanStDate</fullName>
        <active>true</active>
        <description>Audit Period End Date cannot be later than the Audit Statement Date</description>
        <errorConditionFormula>EV_Code_Signing_Audit_Period_End_Date__c &gt; EV_Code_Signing_Audit_Statement_Date__c</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>Audit Period End Date cannot be later than the Audit Statement Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVCodeSignAuditWebTrustSealIsNotPDF</fullName>
        <active>false</active>
        <description>DO NOT USE If audit file is https://www.cpacanada.ca/webtrustseal?sealid&quot; then prompt user to provide pdf file link and not the seal</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), REGEX(EV_Code_Signing_Audit_Statement_Link__c, &quot;^https:\\/\\/www.cpacanada.ca\\/webtrustseal\\?sealid.*&quot;))</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Audit_Statement_Link__c</errorDisplayField>
        <errorMessage>DO NOT USE Provide the URL to the EV Code Signing Audit Statement PDF file, not the Seal. e.g. http://www.cpacanada.ca/GenericHandlers/AptifyAttachmentHandler.ashx?AttachmentID=...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVSAuditDataVerifiedAfterAuthConfim</fullName>
        <active>true</active>
        <description>Show error when &quot;Data Verified&quot; is selected without checking the check box for Audit Authenticity Confirmed</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), 
NOT(ISBLANK(EV_Audit_Statement_Link__c)),ISPICKVAL(EV_Audit_Statement_Link_Verified__c, &quot;Data Verified&quot;), EV_SSL_Audit_Authenticity_Confirmed__c &lt;&gt; TRUE)</errorConditionFormula>
        <errorDisplayField>EV_SSL_Audit_Authenticity_Confirmed__c</errorDisplayField>
        <errorMessage>EV SSL Audit Authenticity Confirmed must be checked before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVSSLAuditWebTrustSealIsNotPDF</fullName>
        <active>false</active>
        <description>DO NOT USE If audit file is https://www.cpacanada.ca/webtrustseal?sealid&quot; then prompt user to provide pdf file link and not the seal</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), REGEX(EV_Audit_Statement_Link__c, &quot;^https:\\/\\/www.cpacanada.ca\\/webtrustseal\\?sealid.*&quot;))</errorConditionFormula>
        <errorDisplayField>EV_Audit_Statement_Link__c</errorDisplayField>
        <errorMessage>DO NOT USE Provide the URL to the EV SSL Audit Statement PDF file, not the Seal. e.g. http://www.cpacanada.ca/GenericHandlers/AptifyAttachmentHandler.ashx?AttachmentID=...</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckEVSSLPeriodEndDtNotLaterThanStDate</fullName>
        <active>true</active>
        <description>Audit Period End Date cannot be later than the Audit Statement Date</description>
        <errorConditionFormula>EV_Audit_Period_End_Date__c &gt; EV_Audit_Statement_Date__c</errorConditionFormula>
        <errorDisplayField>EV_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>Audit Period End Date cannot be later than the Audit Statement Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfBRAuditEndDateLessThanStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
 BR_Audit_Period_Start_Date__c &gt; BR_Audit_Period_End_Date__c)</errorConditionFormula>
        <errorDisplayField>BR_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>End Date should be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfBRAuditLinkBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), ISPICKVAL(BR_Audit_Statement_Link_Verified__c, &quot;Data Verified&quot;),
OR(ISBLANK(BR_Audit_Statement_Link__c), 
ISPICKVAL(BR_Audit_Type__c, &quot;&quot;), 
ISBLANK(BR_Audit_Statement_Date__c), 
ISBLANK(BR_Audit_Period_Start_Date__c), 
ISBLANK(BR_Audit_Period_End_Date__c) 
))</errorConditionFormula>
        <errorDisplayField>BR_Audit_Statement_Link_Verified__c</errorDisplayField>
        <errorMessage>BR Audit Statement, Audit Type, Audit Statement Date, Audit Period Start &amp; End Dates must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfBRdAuditTypeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
     NOT (ISBLANK(BR_Audit_Statement_Link__c)),
     ISPICKVAL (BR_Audit_Type__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>BR_Audit_Type__c</errorDisplayField>
        <errorMessage>Please provide audit type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCADocumentRepositoryIsFilled</fullName>
        <active>false</active>
        <description>DO NOT  USE - &apos;CA Document Repository&apos; must be filled when CP or CPS link is provided</description>
        <errorConditionFormula>AND (OR(NOT(ISBLANK(Certificate_Policy_Link__c)),  NOT(ISBLANK(Certification_Practice_Statement_Link__c))),  ISBLANK(CA_Document_Repository__c))</errorConditionFormula>
        <errorDisplayField>CA_Document_Repository__c</errorDisplayField>
        <errorMessage>DO NOT USE &apos;CA Document Repository&apos; must be filled when CP or CPS link is provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCAOwnerBlank</fullName>
        <active>true</active>
        <description>CA Owner cannot be blank</description>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), ISBLANK(Account.Name))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>CA Owner must be provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCPAuditLinkBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), ISPICKVAL(CP_CPS_Links_Verified__c, &quot;Data Verified&quot;),
ISBLANK(Certificate_Policy_Link__c))</errorConditionFormula>
        <errorDisplayField>Certificate_Policy_Link__c</errorDisplayField>
        <errorMessage>Certificate Policy (Link) must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCPCPSCPCPSBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),  
ISPICKVAL(CP_CPS_Links_Verified__c, &quot;Data Verified&quot;), 
ISBLANK(CA_Document_Repository__c), 
ISBLANK(Certificate_Policy_Link__c), 
ISBLANK(Certification_Practice_Statement_Link__c)  
)</errorConditionFormula>
        <errorDisplayField>CP_CPS_Links_Verified__c</errorDisplayField>
        <errorMessage>CA Document Repository and/or Certificate Policy and/or Certificate Practice Statement must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCPCPSLastUpdatedDateIsFilled</fullName>
        <active>false</active>
        <description>DO NOT USE - &apos;CP/CPS Last Updated Date&apos; must be filled when CP or CPS link is provided</description>
        <errorConditionFormula>AND (OR(NOT(ISBLANK(Certificate_Policy_Link__c)),  NOT(ISBLANK(Certification_Practice_Statement_Link__c))),  ISBLANK(CP_CPS_Last_Updated_Date__c))</errorConditionFormula>
        <errorDisplayField>CP_CPS_Last_Updated_Date__c</errorDisplayField>
        <errorMessage>DO NOT USE  &apos;CP/CPS Last Updated Date&apos; must be filled when CP or CPS link is provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCPCPSUpdateDateBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),  
ISPICKVAL(CP_CPS_Links_Verified__c, &quot;Data Verified&quot;), 
ISBLANK(CP_CPS_Last_Updated_Date__c) 
)</errorConditionFormula>
        <errorDisplayField>CP_CPS_Links_Verified__c</errorDisplayField>
        <errorMessage>CP/CPS Last Updated Date must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCPSAuditLinkBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), ISPICKVAL(CP_CPS_Links_Verified__c, &quot;Data Verified&quot;),
ISBLANK(Certification_Practice_Statement_Link__c))</errorConditionFormula>
        <errorDisplayField>Certification_Practice_Statement_Link__c</errorDisplayField>
        <errorMessage>Certification Practice Statement (Link) must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCSAuditEndDateLessThanStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
 Code_Signing_Audit_Period_Start_Date__c &gt; Code_Signing_Audit_Period_End_Date__c)</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>End Date should be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCSAuditLinkBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;), ISPICKVAL(Code_Signing_Audit_Verified__c, &quot;Data Verified&quot;),
OR(ISBLANK(Code_Signing_Audit_Statement_Link__c), 
ISPICKVAL(Code_Signing_Audit_Type__c, &quot;&quot;), 
ISBLANK(Code_Signing_Audit_Statement_Date__c), 
ISBLANK(Code_Signing_Audit_Period_Start_Date__c), 
ISBLANK(Code_Signing_Audit_Period_End_Date__c) 
))</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Verified__c</errorDisplayField>
        <errorMessage>Code Signing Audit Statement, Audit Type, Audit Statement Date, Audit Period Start &amp; End Dates must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfCodeSigningAuditTypeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
     NOT (ISBLANK(Code_Signing_Audit_Statement_Link__c)),
     ISPICKVAL (Code_Signing_Audit_Type__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Code_Signing_Audit_Type__c</errorDisplayField>
        <errorMessage>Please provide audit type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfEVCodeSignAuditEndDtLessThanStart</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
 EV_Code_Signing_Audit_Period_Start_Date__c &gt; EV_Code_Signing_Audit_Period_End_Date__c)</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Audit_Period_End_Date__c</errorDisplayField>
        <errorMessage>End Date should be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfEVCodeSignLinkBlankCannotVerifiy</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),  
ISPICKVAL(EV_Code_Signing_Verified__c, &quot;Data Verified&quot;), 
OR(ISPICKVAL(EV_Code_Signing_Audit_Type__c, &quot;&quot;), 
ISBLANK(EV_Code_Signing_Audit_Statement_Date__c), 
ISBLANK(EV_Code_Signing_Audit_Period_Start_Date__c), 
ISBLANK(EV_Code_Signing_Audit_Period_End_Date__c) 
))</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Verified__c</errorDisplayField>
        <errorMessage>EV Code Signing Audit Statement, Audit Type, Audit Statement Date, Audit Period Start &amp; End Dates must be filled in before selecting &apos;Data Verified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckIfEVCodeSigningAuditTypeBlank</fullName>
        <active>true</active>
        <errorConditionFormula>AND (OR(RecordType.Name = &quot;CA Audit Update Request&quot;, RecordType.Name = &quot;CA Root Inclusion Request&quot;),
     NOT (ISBLANK(EV_Code_Signing_Audit_Statement_Link__c)),
     ISPICKVAL (EV_Code_Signing_Audit_Type__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>EV_Code_Signing_Audit_Type__c</errorDisplayField>
        <errorMessage>Please provide audit type</errorMessage>
    </validationRules>
</CustomObject>